<?xml version="1.0"?>
<package format="2">
  <name>web_components_launching</name>
  <version>0.0.0</version>
  <description>The web_components_launching package</description>

  <maintainer email="tianyaoh@hotmail.com">Tianyao Hu</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>course_web_dev_ros</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>course_web_dev_ros</exec_depend>

</package>
